--- a/index.html
+++ b/index.html
@@ -68,17 +68,17 @@
       <div class="benefits-up">
         <div class="signature-yellow signature-item">
           <p class="signature-text">Материалы</p>
-          <a class="signature-first signature-button" href="#">На любой вкус</a>
+          <a class="signature-button" href="#">На любой вкус</a>
         </div>
 
         <div class="signature-blue signature-item">
           <p class="signature-text">Инструмент</p>
-          <a class="signature-second signature-button" href="#">На все случаи</a>
+          <a class="signature-button" href="#">На все случаи</a>
         </div>
 
         <div class="signature-pink signature-item">
           <p class="signature-text">Техника</p>
-          <a class="signature-third signature-button" href="#">для стройки</a>
+          <a class="signature-button" href="#">для стройки</a>
         </div>
 
       </div>
@@ -87,16 +87,16 @@
 
 
         <div class="slider">
-            <input type="radio" name="radio-slider" id="radio-left" checked>
-            <input type="radio" name="radio-slider" id="radio-right">
-            <div class="arrow-radio">
-              <label for="radio-left" class="arrow-left"></label>
-              <label for="radio-right" class="arrow-right"></label>
-            </div>
-            <div class="slide-control">
-              <label for="radio-left" class="toggle"></label>
-              <label for="radio-right" class="toggle"></label>
-            </div>
+          <input type="radio" name="radio-slider" id="radio-left" checked>
+          <input type="radio" name="radio-slider" id="radio-right">
+          <div class="arrow-radio">
+            <label for="radio-left" class="arrow-left"></label>
+            <label for="radio-right" class="arrow-right"></label>
+          </div>
+          <div class="slide-control">
+            <label for="radio-left" class="toggle"></label>
+            <label for="radio-right" class="toggle"></label>
+          </div>
           <div class="swiching">
             <div class="slide-first">
               <div class="slider-text">
@@ -123,13 +123,13 @@
         <div>
           <div class="signature-green signature-item">
             <p class="signature-text">Скидки 50%</p>
-            <a class="signature-fourth signature-button" href="#">На 350 товаров</a>
+            <a class="signature-button" href="#">На 350 товаров</a>
 
           </div>
 
           <div class="signature-car signature-item">
             <p class="signature-text">Доставка</p>
-            <a class="signature-fifth signature-button" href="#">Бесплатно</a>
+            <a class="signature-button" href="#">Бесплатно</a>
           </div>
 
         </div>
