--- a/catalog.html
+++ b/catalog.html
@@ -84,43 +84,43 @@
     <div class="catalog-wrapper">
       <section class="select-box">
         <h4>Выбор производителя и питания</h4>
-          <div class="filter-list">фильтр:</div>
+        <div class="filter-list">фильтр:</div>
         <section class="cost">
-            <h3>цена:</h3>
-            <div class="range-control">
-              <div class="range">
-                <div class="slider-range"></div>
-              </div>
-              <div class="circle circle-left"></div>
-              <div class="circle circle-right"></div>
+          <h3>цена:</h3>
+          <div class="range-control">
+            <div class="range">
+              <div class="slider-range"></div>
             </div>
-            <label class="min-price">
-              <input name="price" type="text" value="0">
-            </label>
-            <span>—</span>
-            <label class="max-price">
-              <input name="price" type="text" value="30000">
-            </label>
-          </section>
+            <div class="circle circle-left"></div>
+            <div class="circle circle-right"></div>
+          </div>
+          <label class="min-price">
+            <input name="price" type="text" value="0">
+          </label>
+          <span>—</span>
+          <label class="max-price">
+            <input name="price" type="text" value="30000">
+          </label>
+        </section>
         <div class="selector">
           <h3 class="multiselect-headline">Производители:</h3>
           <div class="checkbox">
             <form class="checkbox" action="https://echo.htmlacademy.ru" method="GET">
-            <input type="checkbox" id="bosch" name="bosch" checked>
-            <label for="bosch">bosch</label>
+              <input type="checkbox" id="bosch" name="bosch" checked>
+              <label for="bosch">bosch</label>
 
-            <input type="checkbox" id="interskol" name="interskol">
-            <label for="interskol">интерскол</label>
+              <input type="checkbox" id="interskol" name="interskol">
+              <label for="interskol">интерскол</label>
 
-            <input type="checkbox" id="makita" name="makita" checked>
-            <label for="makita">makita</label>
+              <input type="checkbox" id="makita" name="makita" checked>
+              <label for="makita">makita</label>
 
-            <input type="checkbox" id="dewalt" name="dewalt">
-            <label for="dewalt">dewalt</label>
+              <input type="checkbox" id="dewalt" name="dewalt">
+              <label for="dewalt">dewalt</label>
 
-            <input type="checkbox" id="hitachi" name="hitachi">
-            <label for="hitachi">hitachi</label>
-          </form>
+              <input type="checkbox" id="hitachi" name="hitachi">
+              <label for="hitachi">hitachi</label>
+            </form>
           </div>
         </div>
         <div class="filter-2">
@@ -140,11 +140,11 @@
         <h4>Каталог перфораторов</h4>
         <div class="sorting-wrapper">
           <div class="conteiner">
-                <span>Сортировка:</span>
-                <div class="sorting-buttons">
-             <a class="sorting-button" href="#">по цене</a>
-             <a class="sorting-button dotted-button" href="#">по типу</a>
-             <a class="sorting-button dotted-button" href="#">по функционалу</a>
+            <span>Сортировка:</span>
+            <div class="sorting-buttons">
+              <a class="sorting-button" href="#">по цене</a>
+              <a class="sorting-button dotted-button" href="#">по типу</a>
+              <a class="sorting-button dotted-button" href="#">по функционалу</a>
             </div>
             <div class="assortment">
               <a class="arrow-up" href="#"></a>
@@ -159,96 +159,8 @@
               <a href="#" class="add-bookmarks">в закладки</a>
             </div>
             <div class="item-img">
-           <img src="img/perforatorbfg3.jpg" width="218" height="178" alt="Перфоратор BOSCH BFG 3000">
-          </div>
-           <h3 class="item-headline">Перфоратор BOSCH BFG 3000</h3>
-            <p class="price-discount">22500 Р .</p>
-            <div class="prise-wrapper">
-              <p class="price">15500 Р .</p>
+              <img src="img/perforatorbfg3.jpg" width="218" height="178" alt="Перфоратор BOSCH BFG 3000">
             </div>
-          </article>
-
-          <article class="arcticle">
-            <div class="actions">
-              <a href="#" class="button-buy">купить</a>
-              <a href="#" class="add-bookmarks">в закладки</a>
-            </div>
-            <div class="item-img">
-            <img class="item-img" src="img/perforatorbfg6.jpg" width="218" height="178" alt="Перфоратор BOSCH BFG 6000">
-          </div>
-            <h3 class="item-headline">Перфоратор BOSCH BFG 6000</h3>
-            <p class="price-discount">30500 Р .</p>
-            <div class="prise-wrapper">
-              <p class="price">25500 Р .</p>
-            </div>
-          </article>
-
-          <article class="arcticle arcticle-new">
-            <div class="actions">
-              <a href="#" class="button-buy">купить</a>
-              <a href="#" class="add-bookmarks">в закладки</a>
-            </div>
-            <div class="item-img">
-            <img src="img/perforatorbfg2.jpg" width="218" height="178" alt="Перфоратор BOSCH BFG 2000">
-          </div>
-            <h3 class="item-headline headline-bfg">Перфоратор BOSCH BFG 2000 </h3>
-            <div class="prise-wrapper">
-              <p class="price">12500 Р .</p>
-            </div>
-          </article>
-
-          <article class="arcticle">
-            <div class="actions">
-              <a href="#" class="button-buy">купить</a>
-              <a href="#" class="add-bookmarks">в закладки</a>
-            </div>
-            <div class="item-img">
-            <img  src="img/perforatorbfg3.jpg" width="218" height="178" alt="Перфоратор BOSCH BFG 3000">
-          </div>
-            <h3 class="item-headline">Перфоратор BOSCH BFG 3000</h3>
-            <p class="price-discount">22500 Р .</p>
-            <div class="prise-wrapper">
-              <p class="price">15500 Р .</p>
-            </div>
-          </article>
-
-          <article class="arcticle arcticle-new">
-            <div class="actions">
-              <a href="#" class="button-buy">купить</a>
-              <a href="#" class="add-bookmarks">в закладки</a>
-            </div>
-            <div class="item-img">
-            <img  src="img/perforatorbfg6.jpg" width="218" height="178" alt="Перфоратор BOSCH BFG 6000">
-          </div>
-            <h3 class="item-headline">Перфоратор BOSCH BFG 6000</h3>
-            <p class="price-discount">30500 Р .</p>
-            <div class="prise-wrapper">
-              <p class="price">25500 Р .</p>
-            </div>
-          </article>
-
-          <article class="arcticle">
-            <div class="actions">
-              <a href="#" class="button-buy">купить</a>
-              <a href="#" class="add-bookmarks">в закладки</a>
-            </div>
-            <div class="item-img">
-            <img  src="img/perforatorbfg2.jpg" width="218" height="178" alt="Перфоратор BOSCH BFG 2000">
-          </div>
-            <h3 class="item-headline headline-bfg">Перфоратор BOSCH BFG 2000 </h3>
-            <div class="prise-wrapper">
-              <p class="price">12500 Р .</p>
-            </div>
-          </article>
-
-          <article class="arcticle arcticle-new">
-            <div class="actions">
-              <a href="#" class="button-buy">купить</a>
-              <a href="#" class="add-bookmarks">в закладки</a>
-            </div>
-            <div class="item-img">
-            <img  src="img/perforatorbfg3.jpg" width="218" height="178" alt="Перфоратор BOSCH BFG 3000">
-          </div>
             <h3 class="item-headline">Перфоратор BOSCH BFG 3000</h3>
             <p class="price-discount">22500 Р .</p>
             <div class="prise-wrapper">
@@ -262,8 +174,53 @@
               <a href="#" class="add-bookmarks">в закладки</a>
             </div>
             <div class="item-img">
-            <img  src="img/perforatorbfg6.jpg" width="218" height="178" alt="Перфоратор BOSCH BFG 6000">
-          </div>
+              <img class="item-img" src="img/perforatorbfg6.jpg" width="218" height="178"
+                alt="Перфоратор BOSCH BFG 6000">
+            </div>
+            <h3 class="item-headline">Перфоратор BOSCH BFG 6000</h3>
+            <p class="price-discount">30500 Р .</p>
+            <div class="prise-wrapper">
+              <p class="price">25500 Р .</p>
+            </div>
+          </article>
+
+          <article class="arcticle arcticle-new">
+            <div class="actions">
+              <a href="#" class="button-buy">купить</a>
+              <a href="#" class="add-bookmarks">в закладки</a>
+            </div>
+            <div class="item-img">
+              <img src="img/perforatorbfg2.jpg" width="218" height="178" alt="Перфоратор BOSCH BFG 2000">
+            </div>
+            <h3 class="item-headline headline-bfg">Перфоратор BOSCH BFG 2000 </h3>
+            <div class="prise-wrapper">
+              <p class="price">12500 Р .</p>
+            </div>
+          </article>
+
+          <article class="arcticle">
+            <div class="actions">
+              <a href="#" class="button-buy">купить</a>
+              <a href="#" class="add-bookmarks">в закладки</a>
+            </div>
+            <div class="item-img">
+              <img src="img/perforatorbfg3.jpg" width="218" height="178" alt="Перфоратор BOSCH BFG 3000">
+            </div>
+            <h3 class="item-headline">Перфоратор BOSCH BFG 3000</h3>
+            <p class="price-discount">22500 Р .</p>
+            <div class="prise-wrapper">
+              <p class="price">15500 Р .</p>
+            </div>
+          </article>
+
+          <article class="arcticle arcticle-new">
+            <div class="actions">
+              <a href="#" class="button-buy">купить</a>
+              <a href="#" class="add-bookmarks">в закладки</a>
+            </div>
+            <div class="item-img">
+              <img src="img/perforatorbfg6.jpg" width="218" height="178" alt="Перфоратор BOSCH BFG 6000">
+            </div>
             <h3 class="item-headline">Перфоратор BOSCH BFG 6000</h3>
             <p class="price-discount">30500 Р .</p>
             <div class="prise-wrapper">
@@ -277,8 +234,52 @@
               <a href="#" class="add-bookmarks">в закладки</a>
             </div>
             <div class="item-img">
-            <img src="img/perforatorbfg2.jpg" width="218" height="178" alt="Перфоратор BOSCH BFG 2000">
-          </div>
+              <img src="img/perforatorbfg2.jpg" width="218" height="178" alt="Перфоратор BOSCH BFG 2000">
+            </div>
+            <h3 class="item-headline headline-bfg">Перфоратор BOSCH BFG 2000 </h3>
+            <div class="prise-wrapper">
+              <p class="price">12500 Р .</p>
+            </div>
+          </article>
+
+          <article class="arcticle arcticle-new">
+            <div class="actions">
+              <a href="#" class="button-buy">купить</a>
+              <a href="#" class="add-bookmarks">в закладки</a>
+            </div>
+            <div class="item-img">
+              <img src="img/perforatorbfg3.jpg" width="218" height="178" alt="Перфоратор BOSCH BFG 3000">
+            </div>
+            <h3 class="item-headline">Перфоратор BOSCH BFG 3000</h3>
+            <p class="price-discount">22500 Р .</p>
+            <div class="prise-wrapper">
+              <p class="price">15500 Р .</p>
+            </div>
+          </article>
+
+          <article class="arcticle">
+            <div class="actions">
+              <a href="#" class="button-buy">купить</a>
+              <a href="#" class="add-bookmarks">в закладки</a>
+            </div>
+            <div class="item-img">
+              <img src="img/perforatorbfg6.jpg" width="218" height="178" alt="Перфоратор BOSCH BFG 6000">
+            </div>
+            <h3 class="item-headline">Перфоратор BOSCH BFG 6000</h3>
+            <p class="price-discount">30500 Р .</p>
+            <div class="prise-wrapper">
+              <p class="price">25500 Р .</p>
+            </div>
+          </article>
+
+          <article class="arcticle">
+            <div class="actions">
+              <a href="#" class="button-buy">купить</a>
+              <a href="#" class="add-bookmarks">в закладки</a>
+            </div>
+            <div class="item-img">
+              <img src="img/perforatorbfg2.jpg" width="218" height="178" alt="Перфоратор BOSCH BFG 2000">
+            </div>
             <h3 class="item-headline headline-bfg">Перфоратор BOSCH BFG 2000 </h3>
             <div class="prise-wrapper">
               <p class="price">12500 Р .</p>
@@ -286,37 +287,38 @@
           </article>
 
         </div>
-          <ul class="page-list">
-            <li class="page-number page-active"><a href="#" aria-label="Страница ">1</a></li>
-            <li class="page-number"><a href="#" aria-label="Страница ">2</a></li>
-            <li class="page-number"><a href="#" aria-label="Страница ">3</a></li>
-            <li class="page-number"><a href="#">Следующая</a></li>
-          </ul>
+        <ul class="page-list">
+          <li class="page-number page-active"><a href="#" aria-label="Страница ">1</a></li>
+          <li class="page-number"><a href="#" aria-label="Страница ">2</a></li>
+          <li class="page-number"><a href="#" aria-label="Страница ">3</a></li>
+          <li class="page-number"><a href="#">Следующая</a></li>
+        </ul>
       </section>
     </div>
 
-<div class="modal-buy">
-  <div class="top-write">
-  <p>Товар добавлен в корзину!</p>
-  </div>
-  <div class="close"></div>
-  <div class="send">
-      <a class="button-order" href="#">Оформить заказ</a>
-      <a class="button-continue" href="#">Продолжить покупки</a>
-  </div>
-</div>
+    <div class="modal-buy">
+      <div class="top-write">
+        <p>Товар добавлен в корзину!</p>
+      </div>
+      <div class="close"></div>
+      <div class="send">
+        <a class="button-order" href="#">Оформить заказ</a>
+        <a class="button-continue" href="#">Продолжить покупки</a>
+      </div>
+    </div>
     <section class="perforator-info">
       <div class="text-wrapper">
-      <h2 class="perforator-text">Пара слов о перфораторах</h2>
-      <p class="perforator-decryption">
-        Перфоратор - универсальный строительный инструмент. Предназначен для сверления и долбления отверстия в кирпиче,
-        бетоне и камне.<br>
-        существует электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели,
-        шуруповерта и отбойного молотка. В <br>
-        асортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная
-        дрель.
-      </p>
-    </div>
+        <h2 class="perforator-text">Пара слов о перфораторах</h2>
+        <p class="perforator-decryption">
+          Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстия в
+          кирпиче,
+          бетоне и камне.<br>
+          существует электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели,
+          шуруповерта и отбойного молотка. В <br>
+          асортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная
+          дрель.
+        </p>
+      </div>
     </section>
 
     <div class="visually-hidden">
