--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>HTML Academy: Техномарт</title>
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style-min.css">
 </head>
 
 <body>
@@ -39,7 +39,8 @@
         </p>
       </div>
       <div class="contacts-box">
-        <a class="telephone" href="tel:+8125550555" aria-label="Наш номер">+7 (812) 555-05-55</a>
+        <div class="telephone-wrapper"><a class="telephone" href="tel:+8125550555" aria-label="Наш номер">+7 (812)
+            555-05-55</a></div>
         <address class="address">г. Санкт-Петербург. ул. Б. Конюшечная, д. 19/9</address>
       </div>
       <div>
@@ -90,12 +91,12 @@
           <input type="radio" name="radio-slider" id="radio-left" checked>
           <input type="radio" name="radio-slider" id="radio-right">
           <div class="arrow-radio">
-            <label for="radio-left" class="arrow-left"></label>
-            <label for="radio-right" class="arrow-right"></label>
+            <label for="radio-left" class="arrow-left" tabindex="0" aria-label="Предыдущий слайд"></label>
+            <label for="radio-right" class="arrow-right" tabindex="0" aria-label="Следующий слайд"></label>
           </div>
           <div class="slide-control">
-            <label for="radio-left" class="toggle"></label>
-            <label for="radio-right" class="toggle"></label>
+            <label for="radio-left" class="toggle" tabindex="0" aria-label="Перый слайд"></label>
+            <label for="radio-right" class="toggle" tabindex="0" aria-label="Второй слайд"></label>
           </div>
           <div class="swiching">
             <div class="slide-first">
@@ -137,17 +138,19 @@
     </section>
     <section class="popular-goods">
       <div class="popular-wrapper">
-        <h2 class="popular-headline">Популярные товары:</h2>
-        <a class="button-popular" href="#">Все популярные товары</a>
+        <div class="popular-conteiner">
+          <h2 class="popular-headline">Популярные товары:</h2>
+          <a class="button-popular" href="#">Все популярные товары</a>
+        </div>
       </div>
       <div>
         <div class="arcticle-wrapper">
-          <article class="arcticle">
+          <article class="arcticle" tabindex="0">
             <div class="actions">
               <a href="#" class="button-buy">купить</a>
               <a href="#" class="add-bookmarks">в закладки</a>
             </div>
-            <img class="item-img" src="img/perforatorbfg9.jpg" width="218" height="178" alt="Перфоратор BOSCH BFG 9000">
+            <img class="item-img" src="img/perforatorbfg9.jpg" width="216" height="170" alt="Перфоратор BOSCH BFG 9000">
             <h3 class="item-headline">Перфоратор BOSCH BFG 9000</h3>
             <p class="price-discount">32500 Р .</p>
             <div class="prise-wrapper">
@@ -155,12 +158,12 @@
             </div>
           </article>
 
-          <article class="arcticle">
+          <article class="arcticle" tabindex="0">
             <div class="actions">
               <a href="#" class="button-buy">купить</a>
               <a href="#" class="add-bookmarks">в закладки</a>
             </div>
-            <img class="item-img" src="img/perforatorbfg3.jpg" width="218" height="178" alt="Перфоратор BOSCH BFG 3000">
+            <img class="item-img" src="img/perforatorbfg3.jpg" width="216" height="170" alt="Перфоратор BOSCH BFG 3000">
             <h3 class="item-headline">Перфоратор BOSCH BFG 3000</h3>
             <p class="price-discount">22500 Р .</p>
             <div class="prise-wrapper">
@@ -168,12 +171,12 @@
             </div>
           </article>
 
-          <article class="arcticle">
+          <article class="arcticle" tabindex="0">
             <div class="actions">
               <a href="#" class="button-buy">купить</a>
               <a href="#" class="add-bookmarks">в закладки</a>
             </div>
-            <img class="item-img" src="img/perforatorbfg6.jpg" width="218" height="178" alt="Перфоратор BOSCH BFG 6000">
+            <img class="item-img" src="img/perforatorbfg6.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
             <h3 class="item-headline">Перфоратор BOSCH BFG 6000</h3>
             <p class="price-discount">30500 Р .</p>
             <div class="prise-wrapper">
@@ -181,17 +184,18 @@
             </div>
           </article>
 
-          <article class="arcticle arcticle-new">
+          <article class="arcticle arcticle-new" tabindex="0">
             <div class="actions">
               <a href="#" class="button-buy">купить</a>
               <a href="#" class="add-bookmarks">в закладки</a>
             </div>
-            <img class="item-img" src="img/perforatorbfg2.jpg" width="218" height="178" alt="Перфоратор BOSCH BFG 2000">
+            <img class="item-img" src="img/perforatorbfg2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
             <h3 class="item-headline headline-bfg">Перфоратор BOSCH BFG 2000 </h3>
             <div class="prise-wrapper">
               <p class="price">12500 Р .</p>
             </div>
           </article>
+
         </div>
       </div>
     </section>
@@ -220,20 +224,23 @@
         <p class="about-service">Хороший интернет-магазин отличается от плохого не только ценами!
           Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными</p>
         <div class="service-information">
-          <div class="service-navigation">
+          <div class="service-container">
             <input type="radio" id="button-1" name="navigation" checked>
             <input type="radio" id="button-2" name="navigation">
             <input type="radio" id="button-3" name="navigation">
-            <label for="button-1">доставка</label>
-            <label for="button-2">гарантия</label>
-            <label for="button-3">кредит</label>
-            <div class="slider-service">
+            <div class="service-navigation">
+              <label for="button-1">доставка</label>
+              <label for="button-2">гарантия</label>
+              <label for="button-3">кредит</label>
+            </div>
+            <div class="slide-content">
               <section class="service-content">
                 <h3>доставка</h3>
                 <p class="delivery-slide">Мы с удовольствием доставим ваш товар прямо
                   к вашему подъезду совершенно бесплатно!
                   Ведь мы неплохо заработаем,
-                  поднимая&nbsp;его&nbsp;на&nbsp;ваш&nbsp;этаж!</p>
+                  поднимая&nbsp;его&nbsp;на&nbsp;ваш&nbsp;этаж!
+                </p>
               </section>
               <section class="service-content">
                 <h3>гарантия</h3>
@@ -243,6 +250,7 @@
                   вы&nbsp;всегда&nbsp;можете&nbsp;быть&nbsp;уверены&nbsp;в&nbsp;нашей&nbsp;гарантии.&nbsp;Мы&nbsp;обменяем
                   сгоревший товар на новый.
                   Дом&nbsp;уж&nbsp;восстановите&nbsp;как-нибудь&nbsp;сами.</p>
+
               </section>
               <section class="service-content">
                 <h3>кредит</h3>
@@ -276,19 +284,19 @@
         <h2 class="contacts-headline">Контакты</h2>
         <p class="text-office">Вы можете забрать товар сами,
           заехав в наш офис:</p>
-        <a class="streat-img" href="#"><img src="img/map-streat.jpg" width="300" height="158"
-            alt="Большая Конюшенная ул., 19"></a>
+        <a class="streat-img" href="https://goo.gl/maps/nke5g1SbKPAKa2jWA"><img src="img/map-streat.jpg" width="300"
+            height="158" alt="Большая Конюшенная ул., 19"></a>
         <a class="button-lost btn-js" href="#">Заблудились? Напишите нам!</a>
       </section>
     </div>
     <div class="map-open">
-      <div class="close"></div>
+      <div class="close map-close"></div>
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.598942412367!2d30.320894615677194!3d59.93879686904843!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1572619371740!5m2!1sru!2sru"
         width="960" height="446" style="border:0;" allowfullscreen=""></iframe>
     </div>
     <form class="write-us" action="https://echo.htmlacademy.ru" method="post">
-      <div class="close"></div>
+      <div class="close popup-close"></div>
       <div class="answer">
         <div class="top-conteiner">
           <div class="write">
@@ -312,9 +320,8 @@
     <div class="footer-up">
       <div class="footer-title">
         <a class="footer-logo" href="#">Техномарт</a>
-        <address class="footer-address">г. Санкт-Петербург. ул. Б. Конюшечная, д. 19/9
-          +7 (812) 555-05-55
-        </address>
+        <address class="footer-address">г. Санкт-Петербург. ул. Б. Конюшечная, д. 19/9</address>
+        <a class="footer-telephone" href="tel:+7(812)555-05-55">+7(812)555-05-55</a>
       </div>
       <div class="footer-nav">
         <ul class="footer-list">
@@ -342,13 +349,13 @@
         </p>
         <ul class="social-list">
           <li class="social-item social-vk">
-            <a class="social-vk" href="#"></a>
+            <a class="social-vk" href="#" aria-label="Мы в Вконтакте"></a>
           </li>
           <li class="social-item social-fb">
-            <a class="social-button" href="#"></a>
+            <a class="social-fb" href="#" aria-label="Мы в Facebook"></a>
           </li>
-          <li class="social-item">
-            <a class="social-button social-insta" href="#"></a>
+          <li class="social-item social-insta">
+            <a class="social-insta" href="#" aria-label="Мы в Instagram"></a>
           </li>
         </ul>
         <div class="feedback-wrapper">
@@ -365,9 +372,7 @@
       </div>
     </div>
   </footer>
-  <script src="js/popup.js"></script>
-  <script src="js/mapframe.js"></script>
-  <script src="js/slider.js"></script>
+  <script src="js/popup-min.js"></script>
 </body>
 
 </html>
