--- a/catalog.html
+++ b/catalog.html
@@ -92,7 +92,7 @@
                 <div class="slider-range"></div>
               </div>
               <div class="circle circle-left" aria-label="Минимальная цена"></div>
-              <div class="circle circle-right" aria-label="Макси"></div>
+              <div class="circle circle-right" aria-label="Максимальная цена"></div>
             </div>
             <div class="prise-control">
               <label class="min-price">
