--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 
 <head>
+  <meta name="format-detection" content="telephone=no"/>
   <meta charset="utf-8">
   <title>HTML Academy: Техномарт</title>
   <link rel="stylesheet" href="css/normalize.css">
