--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
               <a href="#" class="button-buy">купить</a>
               <a href="#" class="add-bookmarks">в закладки</a>
             </div>
-            <img class="item-img" src="img/perforatorbfg9.jpg" width="216" height="170" alt="Перфоратор BOSCH BFG 9000">
+            <img class="item-img" src="img/Perforatorbfg9.jpg" width="216" height="170" alt="Перфоратор BOSCH BFG 9000">
             <h3 class="item-headline">Перфоратор BOSCH BFG 9000</h3>
             <p class="price-discount">32500 Р .</p>
             <div class="prise-wrapper">
@@ -164,7 +164,7 @@
               <a href="#" class="button-buy">купить</a>
               <a href="#" class="add-bookmarks">в закладки</a>
             </div>
-            <img class="item-img" src="img/perforatorbfg3.jpg" width="216" height="170" alt="Перфоратор BOSCH BFG 3000">
+            <img class="item-img" src="img/Perforatorbfg3.jpg" width="216" height="170" alt="Перфоратор BOSCH BFG 3000">
             <h3 class="item-headline">Перфоратор BOSCH BFG 3000</h3>
             <p class="price-discount">22500 Р .</p>
             <div class="prise-wrapper">
@@ -177,7 +177,7 @@
               <a href="#" class="button-buy">купить</a>
               <a href="#" class="add-bookmarks">в закладки</a>
             </div>
-            <img class="item-img" src="img/perforatorbfg6.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
+            <img class="item-img" src="img/Perforatorbfg6.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
             <h3 class="item-headline">Перфоратор BOSCH BFG 6000</h3>
             <p class="price-discount">30500 Р .</p>
             <div class="prise-wrapper">
@@ -190,7 +190,7 @@
               <a href="#" class="button-buy">купить</a>
               <a href="#" class="add-bookmarks">в закладки</a>
             </div>
-            <img class="item-img" src="img/perforatorbfg2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
+            <img class="item-img" src="img/Perforatorbfg2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
             <h3 class="item-headline headline-bfg">Перфоратор BOSCH BFG 2000 </h3>
             <div class="prise-wrapper">
               <p class="price">12500 Р .</p>
