--- a/catalog.html
+++ b/catalog.html
@@ -161,7 +161,7 @@
               <a href="#" class="button-buy">купить</a>
               <a href="#" class="add-bookmarks">в закладки</a>
             </div>
-            <img class="item-img" src="img/perforatorbfg3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+            <img class="item-img" src="img/Perforatorbfg3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
             <h3 class="item-headline">Перфоратор BOSCH BFG 3000</h3>
             <p class="price-discount">22500 Р .</p>
             <div class="prise-wrapper">
@@ -174,7 +174,7 @@
               <a href="#" class="button-buy">купить</a>
               <a href="#" class="add-bookmarks">в закладки</a>
             </div>
-            <img class="item-img" src="img/perforatorbfg6.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
+            <img class="item-img" src="img/Perforatorbfg6.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
             <h3 class="item-headline">Перфоратор BOSCH BFG 6000</h3>
             <p class="price-discount">30500 Р .</p>
             <div class="prise-wrapper">
@@ -187,7 +187,7 @@
               <a href="#" class="button-buy">купить</a>
               <a href="#" class="add-bookmarks">в закладки</a>
             </div>
-            <img class="item-img" src="img/perforatorbfg2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
+            <img class="item-img" src="img/Perforatorbfg2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
             <h3 class="item-headline headline-bfg">Перфоратор BOSCH BFG 2000 </h3>
             <div class="prise-wrapper">
               <p class="price">12500 Р .</p>
@@ -199,7 +199,7 @@
               <a href="#" class="button-buy">купить</a>
               <a href="#" class="add-bookmarks">в закладки</a>
             </div>
-            <img class="item-img" src="img/perforatorbfg3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+            <img class="item-img" src="img/Perforatorbfg3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
             <h3 class="item-headline">Перфоратор BOSCH BFG 3000</h3>
             <p class="price-discount">22500 Р .</p>
             <div class="prise-wrapper">
@@ -212,7 +212,7 @@
               <a href="#" class="button-buy">купить</a>
               <a href="#" class="add-bookmarks">в закладки</a>
             </div>
-            <img class="item-img" src="img/perforatorbfg6.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
+            <img class="item-img" src="img/Perforatorbfg6.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
             <h3 class="item-headline">Перфоратор BOSCH BFG 6000</h3>
             <p class="price-discount">30500 Р .</p>
             <div class="prise-wrapper">
@@ -225,7 +225,7 @@
               <a href="#" class="button-buy">купить</a>
               <a href="#" class="add-bookmarks">в закладки</a>
             </div>
-            <img class="item-img" src="img/perforatorbfg2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
+            <img class="item-img" src="img/Perforatorbfg2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
             <h3 class="item-headline headline-bfg">Перфоратор BOSCH BFG 2000 </h3>
             <div class="prise-wrapper">
               <p class="price">12500 Р .</p>
@@ -237,7 +237,7 @@
               <a href="#" class="button-buy">купить</a>
               <a href="#" class="add-bookmarks">в закладки</a>
             </div>
-            <img class="item-img" src="img/perforatorbfg3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+            <img class="item-img" src="img/Perforatorbfg3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
             <h3 class="item-headline">Перфоратор BOSCH BFG 3000</h3>
             <p class="price-discount">22500 Р .</p>
             <div class="prise-wrapper">
@@ -250,7 +250,7 @@
               <a href="#" class="button-buy">купить</a>
               <a href="#" class="add-bookmarks">в закладки</a>
             </div>
-            <img class="item-img" src="img/perforatorbfg6.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
+            <img class="item-img" src="img/Perforatorbfg6.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
             <h3 class="item-headline">Перфоратор BOSCH BFG 6000</h3>
             <p class="price-discount">30500 Р .</p>
             <div class="prise-wrapper">
@@ -263,7 +263,7 @@
               <a href="#" class="button-buy">купить</a>
               <a href="#" class="add-bookmarks">в закладки</a>
             </div>
-            <img class="item-img" src="img/perforatorbfg2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
+            <img class="item-img" src="img/Perforatorbfg2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
             <h3 class="item-headline headline-bfg">Перфоратор BOSCH BFG 2000 </h3>
             <div class="prise-wrapper">
               <p class="price">12500 Р .</p>
